<resources>
    <string name="app_name">App EcoCleaning</string>
    <string name="mais_adicionais">+ Serviços opcionais</string>
    <string name="erro_localizar_servicos">Não há serviços disponíveis no momento!</string>
    <string name="erro_conexao">Não foi possivel se conectar a internet</string>
    <string name="erro_conexao_wifi">Não há uma conexão com a internet</string>
    <string name="meus_historicos">Históricos</string>
    <string name="meus_contratos">Meus Serviços</string>
    <string name="config">Config.</string>
    <string name="favoritos">Favoritos</string>
    <string name="search">Buscar</string>
    <string name="search_inapp">Pesquise na EcoCleaning</string>
    <string name="servicos_disponiveis">Aqui estão todos os serviços disponíveis para você.</string>
    <string name="select_for_preci">Selecione o serviço para saber o preço</string>
    <string name="servicos_opsicionais">+ Serviços opcionais</string>
    <string name="clique_para_sair">Clique novamente para sair!</string>
    <string name="continuar">Continuar</string>
    <string name="block_msg">A sua conta foi bloqueada por tempo indeterminado, veja o motivo: </string>
    <string name="email">E-Mail</string>
    <string name="senha">Senha</string>
    <string name="termosUso">Eu li e aceito os <a href="https://www.temros.com.br">termos e condições de uso</a></string>
    <string name="privacy">Eu li e aceito a <a href="https://www.temros.com.br">política de privacidade</a></string>
    <string name="lembrar">Lembrar</string>
    <string name="entrar">Entrar</string>
    <string name="nova_conta">Criar nova conta</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="redefinir">Redefinir senha</string>
    <string name="redefinir_msg">Entre com o E-Mail cadastrado, para receber o E-Mail de recuperação</string>
    <string name="firebaseAuthInvalidUserException">O E-Mail digitado não existe em nossos serviços</string>
    <string name="authException">Não conseguimos se conectar ao servidor, tente novamente!</string>
    <string name="firebaseAuthInvalidCredentialsException">Sua senha esta incorreta!</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_o_seu_email_valido">Digite um E-Mail valido</string>
    <string name="digite_o_seu_email">Digite seu E-Mail</string>
    <string name="sem_conexao">Sem conexão com a internet</string>
    <string name="verificando_email">Estamos verificando seuu E-Mail</string>
    <string name="verifique_sua_caixa_de_email">Verifique sua caixa de E-Mail</string>
    <string name="nome_sobrenome">Nome e sobrenome</string>
    <string name="senha_repetir">Confirme sua senha</string>
    <string name="telefone">WhatsApp</string>
    <string name="endereco">Endereço</string>
    <string name="criar_conta">Criar conta</string>
    <string name="fazer_login">Fazer login</string>
    <string name="cidade">Cidade</string>
    <string name="nome_rua">Nome da rua e número</string>
    <string name="nome_numero_casa">Número da casa</string>
    <string name="nome_bairro">Nome do bairro</string>
    <string name="nome_referencia">Referência</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="digite_referencia">Digite um ponto de referência</string>
    <string name="digite_bairro">Digite o nome do seu bairro</string>
    <string name="digite_numero_casa">Digite o número da sua casa</string>
    <string name="digite_nome_rua_numero">Digite o nome da rua e número da casa</string>
    <string name="aceite_a_politica">Aceite a nossa política de privacidade para continuar</string>
    <string name="aceite_os_termos">Aceito os nossos termos para continuar</string>
    <string name="digite_o_seu_telefone_ddd">Digite seu número, DDD + Número</string>
    <string name="senha_n_igual">Sua senha não é igual a anterior</string>
    <string name="senha_novamente">Digite sua senha aqui novamente</string>
    <string name="digite_nome_valido">Digite um nome valido</string>
    <string name="firebaseAuthUserCollisionException">Já possui um cadastro com esse E-Mail, tente outro ou faça Login</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="error_troca_nome">Ocorreu uma falha ao troca o nome</string>
    <string name="error_troca_email">Não foi possivel trocar seu e-mail</string>
    <string name="troca_email">Seu e-mail foi substituido com sucesso!</string>
    <string name="troca_nome">Seu nome foi substituido com sucesso!</string>
    <string name="numero_telefone">Número de telefone</string>
    <string name="digite_o_seu_telefone">Digite seu número de celular</string>
    <string name="digite_o_seu_telefone_correto">Digite um número de telefone correto</string>
    <string name="error_troca_telefone">Falha ao mudar número</string>
    <string name="troca_telefone">Seu número de telefone foi substituido</string>
    <string name="digite_o_seu_endereco">Digite seu endereço</string>
    <string name="error_troca_endereco">Não conseguimos mudar seu endereço</string>
    <string name="troca_endereco">Seu endereco foi substituido</string>
    <string name="erro_gps_rota">Não foi possivel acessar o GPS</string>
    <string name="digite_o_seu_cidade">Entre com a cidade que voce esta</string>
    <string name="cidades_erro_load">Falha ao carregar as cidades</string>
    <string name="somente_maranhao">Maranhão</string>
    <string name="aguarde">Aguarde…</string>
    <string name="title_notifications">Notificações</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_sera_notificado">Sempre que seu pedido atualizar não será notificado</string>
    <string name="sempre_que_seu_pedido_atualizar_voce_nao_sera_notificado">Sempre que seu pedido atualizar você não será notificado</string>
    <string name="nome">Nome</string>
    <string name="title_conta">Conta</string>
    <string name="app_exit">Sair do aplicativo</string>
    <string name="configurar_notificação_push">Configurar notificação Push</string>
    <string name="birdsoft_technologies">Birdsoft Technologies</string>
    <string name="sair_titulo">Sair do aplicativo</string>
    <string name="sair_msg">Se você sair do aplicativo ao retornar vai ser preciso realizar novamente o login.</string>
    <string name="sair_msg_sucesso">Você saiu com sucesso!</string>
    <string name="clique_senha">Clique para substituir a senha</string>
    <string name="falha_settings_info">Falha ao atualizar, tente novamente</string>
    <string name="tente_atualizar_info">Tentando atualizar as informações, aguarde…</string>
    <string name="falha_verificado_email">Falha ao verificar E-Mail</string>
    <string name="cidade_atualizada">Cidade atualizada</string>
    <string name="cidade_atualizada_falha">Falha ao atualizar cidade</string>
    <string name="todo" />
    <string name="sem_favoritos">Ainda não há favoritos</string>
    <string name="falha_add_favorito">Falha ao adicionar aos favoritos</string>
    <string name="sem_historicos">Não há históricos aqui!</string>
    <string name="servico_concluido">Serviço concluido</string>
    <string name="servico_cancelado">Serviço cancelado</string>
    <string name="sem_notifications">Não há notificações</string>
    <string name="sem_servicos">Não há serviços disponíveis</string>
    <string name="compart">Compart.</string>
    <string name="contratar">Contratar serviço</string>
    <string name="erro_carregar_cidades">Não foi possivel carregar os dados das cidades</string>
    <string name="erro">Falha</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="ligacao">Ligação</string>
    <string name="enviar_email">Enviar E-mail</string>
    <string name="enter_em_ctt">Entre em contato com a EcoCleaning</string>
    <string name="configuracoes">Configurações</string>
    <string name="notification">Notificações</string>
    <string name="servicos_disponiveis_opcionais">Aqui estão os serviços opcionais</string>
    <string name="casa">Casa</string>
    <string name="sobrado">Sobrado</string>
    <string name="predio">Prédio</string>
    <string name="condominios_casas">Condômínio de casas</string>
    <string name="bloco_n_app">Bloco e número do AP</string>
    <string name="s_n">S/N</string>
    <string name="complementos">Complementos</string>
    <string name="digite_complemento">Digite o complemento</string>
    <string name="senha_fraca">Sua senha é muito fraca!</string>
    <string name="msg_conta_not_auter">A conta que deseja acessar não pode ser usada como conta de cliente, ela está cadastrada como conta de Admin</string>
    <string name="msg_alert">Alerta</string>
    <string name="deleta_carrinho_titulo">Carrinho</string>
    <string name="msg_deleta_carrinhp">Tem certeza que deseja remover do seu carrinho?</string>
    <string name="error_cupom_ja_usado_por_vc">Cupom já adicionado a sua conta!</string>
    <string name="adicionado_ao_carrinhoAdi">Adicionado ao carrinho!</string>
    <string name="adicionado_ao_carrinho">Adicionado ao carrinho com sucesso!</string>
    <string name="error_adicionar_carrinho">Não conseguimos adicionar ao carrinho</string>
    <string name="quant_max">Selecione a quantidade que deseja desse lanche, o limite máximo é 10.</string>
    <string name="quant_max_titulo">Quantidade</string>
    <string name="selecione_para_continuar">É preciso selecionar algo para continuar com seu pedido</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="deletar_do_historico">Apagar dos históricos</string>
    <string name="sem_anuncios">Sem anúncios</string>
    <string name="error_layout">Falha ao entrar nesta pagina</string>
    <string name="escolha">escolha</string>
    <string name="selecione">selecione</string>
    <string name="bedida">bedida</string>
    <string name="sabo">sabo</string>
    <string name="e_nescessario_que">É nescessário que</string>
    <string name="e_nescessario_voce">É nescessário você</string>
    <string name="e_nescessario_voce_seleciona_uma">É nescessário você seleciona uma</string>
    <string name="para_continuar"> para continuar</string>
    <string name="para_continuar_vc_selecione_ate">para continuar, você pode selecionar até</string>
    <string name="e_nescessario">É nescessário</string>
    <string name="e_nescessario_voce_selecione_um">É nescessário você seleciona um</string>
    <string name="sabor">sabor</string>
    <string name="bebidas">bebidas</string>
    <string name="selaciona">selaciona</string>
    <string name="escolar">escolar</string>
    <string name="itens">itens</string>
    <string name="item">item</string>
    <string name="adicionar">Adicionar</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="tempo">Tempo</string>
    <string name="inifinity">…</string>
    <string name="informacao_servico">Info. Serviço</string>
    <string name="tempo_servico">Tempo de serviço total:</string>
    <string name="dia_do_servico">Dia do serviço</string>
    <string name="agendar">Agendar</string>
    <string name="tempo_servico_fim">Horário total serviço:</string>
    <string name="menu_op_es">Menu opções</string>
    <string name="atencao">Atenção</string>
    <string name="observacao_desc">Digite uma nova observação.</string>
    <string name="digite_aqui">Digite aqui…</string>
    <string name="pedido_n_chegou">Serviço atrasado</string>
    <string name="pedido_cancelar">Cancelar serviço</string>
    <string name="alterar_endereco">Alterar endereço</string>
    <string name="enviar_notificacao">Enviar uma curta mensagem</string>
    <string name="msg_cancelar_pedido_dialog">O cancelamento do pedido é irreversível o cliente irá receber um notificação sobre o cancelamento</string>
    <string name="hint_cancelar_pedido_dialog">Digite uma mensagem dizendo o porque do cancelamento</string>
    <string name="fechar">Fechar</string>
</resources>