<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/translation"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                style="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="@font/gotham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_op_es"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_n_chegou"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/bg_btn_relate_grey"
            android:layout_width="match_parent"
            android:text="@string/pedido_n_chegou"
            android:layout_height="48dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_cancelar"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate_grey"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:text="@string/pedido_cancelar"
            android:layout_height="48dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_alterar_endereco"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate_grey"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:text="@string/alterar_endereco"
            android:layout_height="48dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_pedido_enviar_notificacao"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_relate_grey"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:text="@string/enviar_notificacao"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:text="@string/cancelar"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"/>
    </LinearLayout>

</RelativeLayout>