<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_line_retancula">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/informacao_servico"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tempo_servico"/>
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_60"
                    android:id="@+id/tempo_servico_total"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dia_do_servico"/>
                <Button
                    android:id="@+id/btn_agendar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/agendar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tempo_servico_fim"/>
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:fontFamily="@font/gill_sans_mt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_60"
                    android:text="@string/inifinity"
                    android:id="@+id/tempo_servico_total_agenda"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/fechar"
            android:background="@drawable/btn_acriligo_vermelho"
            android:textColor="@color/acriligo_tint_vermelho"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"
            android:layout_gravity="end"/>
        <Button
            android:id="@+id/confirmar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:background="@drawable/btn_acriligo_verde"
            android:textColor="@color/acriligo_tint_verde"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end" />
    </LinearLayout>
</LinearLayout>