<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/atencao"
                android:fontFamily="@font/gotham"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/msg_cancelar_pedido_dialog"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="@font/gill_sans_mt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/message_cancel"
                android:maxLength="300"
                android:background="@drawable/bg_line_retancula"
                android:layout_width="match_parent"
                android:gravity="top"
                android:padding="10dp"
                android:fontFamily="@font/gill_sans_mt"
                android:hint="@string/hint_cancelar_pedido_dialog"
                android:layout_height="170dp"/>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_cancelar"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_btn_relate"
                    android:text="@string/cancelar"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="38dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_comfirmar_cancelamento"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_btn_relate"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/branco"
                    android:text="@string/confirmar"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>